--- a/app/views/addlink.html
+++ b/app/views/addlink.html
@@ -16,7 +16,7 @@
     <div class="form-group">
       <label class="control-label col-sm-2" >Link:</label>
       <div class="col-sm-10">          
-        <input type="link" ng-blur="getDescription(link)" ng-model="link" class="form-control" id="lnk" placeholder="Enter link">
+        <input type="link" ng-blur="getDescription(link);getTitle(link)" ng-model="link" class="form-control" id="lnk" placeholder="Enter link">
       </div> </div>
 
 
