--- a/app/styles/styles.css
+++ b/app/styles/styles.css
@@ -328,3 +328,64 @@ hr{
 .bootstrap-tagsinput {
 	width: 95%;
 }
+
+.topspace{
+	margin-top: 80px;
+}
+.art{
+	background-color:#2b303b;
+	border: none;
+	color: #ffffff;
+
+}
+
+
+/*TABLE IRC*/
+div.centre
+{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+body {
+  color: #666;
+  font: 14px/24px "Open Sans", "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", Sans-Serif;
+}
+table {
+  border-collapse: separate;
+  border-spacing: 0;
+  width: 100%;
+  margin-bottom: 20px;
+}
+th,
+td {
+  padding: 6px 15px;
+}
+th {
+  background: #42444e;
+  color: #fff;
+  text-align: left;
+}
+tr:first-child th:first-child {
+  border-top-left-radius: 6px;
+}
+tr:first-child th:last-child {
+  border-top-right-radius: 6px;
+}
+td {
+  border-right: 1px solid #c6c9cc;
+  border-bottom: 1px solid #c6c9cc;
+}
+td:first-child {
+  border-left: 1px solid #c6c9cc;
+}
+tr:nth-child(even) td {
+  background: #eaeaed;
+}
+tr:last-child td:first-child {
+  border-bottom-left-radius: 6px;
+}
+tr:last-child td:last-child {
+  border-bottom-right-radius: 6px;
+}
