--- a/app/styles/styles.css
+++ b/app/styles/styles.css
@@ -9,9 +9,13 @@ body {
 }
 .panelpanel{
 	width: 325px;
+
 	display: inline-block;
     margin-right: 5px;
     margin-left: 5px;
+	position:                   relative;
+    font-family:                sans-serif;
+    overflow:                   hidden;
 }
 
 .panelraw{
@@ -139,7 +143,25 @@ body.pml-open #wrapper {
 	margin-left:15px;
 }
 .paneltxt{
-	font-size: 80%;
+    color:                      #333;
+    width:                      100%;
+    #background:                 #E0E0E0;
+    font-size:                  .95em;
+    line-height:                1;
+    text-align:     			justify;
+}
+
+
+
+
+.paneltxt:before {
+    content:                    '...';
+    text-align:                 right;
+    position:                   absolute;
+    width:                      2em;
+    height:                     1em;
+    bottom:                     1em;
+    right:                      20px;
 }
 .panel-body{
 	padding-top: 0;
@@ -148,6 +170,8 @@ body.pml-open #wrapper {
 .panel-footer{
 	padding-top: 2px;
 	padding-bottom: 2px;
+	height: 100%;
+
 
 }
 
