--- a/app/views/home.html
+++ b/app/views/home.html
@@ -38,7 +38,7 @@
 		<ul class="raw-link">
 			<li ng-repeat="n in links | filter: {lang: l} | filterLinks:'':hideDownLinks:tags | orderBy : sortBy" title="{{n.title}}" data-trigger="hover" bs-popover data-html="true" data-animation="am-fade-and-scale" data-content="
 				{{n.description}}
-				<img src='../images/small.png' class='img-thumbnail panel-thumb'></img>
+				<img src='http://localhost:1337/tt/{{n.title}}.png' class='img-thumbnail panel-thumb'></img>
 				" >
 				<a href="{{n.link}}" target="_parent">
 					{{n.title}}
