--- a/app/styles/styles.css
+++ b/app/styles/styles.css
@@ -152,7 +152,16 @@ body.pml-open #wrapper {
 }
 
 
-
+.paneltxt:after {
+        content:                    ' ';
+        position:                   absolute;
+        display:                    block;
+        width:                      100%;
+        height:                     1em;
+        bottom:                     0px;
+        left:                       0px;
+        background:                 #E0E0E0;
+    }
 
 .paneltxt:before {
     content:                    '...';
