--- a/app/views/irc.html
+++ b/app/views/irc.html
@@ -1,13 +1,15 @@
+<div class="centre">
+
 <div class="centre topspace" style="width:525px;"><pre class="art">
  _______        _______ _______  ______ __   _ _______ _______
- |       |      |______ |_____| |_____/ | \  | |______    |   
- |_____  |_____ |______ |     | |    \_ |  \_| |______    |   
-                                                                   
+ |       |      |______ |_____| |_____/ | \  | |______    |
+ |_____  |_____ |______ |     | |    \_ |  \_| |______    |
+
                                                     </pre></div>
-<table>
+<table >
     <thead>
         <tr>
-            <th>Freenode (irc.freenode.net/6697(ssl))</th>
+            <th >Freenode (irc.freenode.net/6697(ssl))</th>
             <th></th>
         </tr>
         <tr>
@@ -59,6 +61,10 @@
         <tr>
             <td>##security</td>
             <td>Computer & Physical Security <a href="http://fnsecurity.org">http://fnsecurity.org</a> <a href="http://ow.ly/gsVTo">http://ow.ly/gsVTo</a></td>
+        </tr>
+        <tr>
+            <td>#vulnhub</td>
+            <td><a href="https://www.vulnhub.com">Vulnhub</a> </td>
         </tr>
     </tbody>
 </table>
@@ -140,7 +146,7 @@
         <tr>
             <th>MalwareTech (irc.malwaretech.com/6697(ssl))</th>
             <th></th>
-           
+
         </tr>
         <tr>
             <th>Channel</th>
@@ -161,14 +167,14 @@
   _______ _____   ______
     |    |     | |_____/
     |    |_____| |    \_
-                       
+
  </pre></div>
  <table>
     <thead>
         <tr>
             <th></th>
             <th></th>
-           
+
         </tr>
         <tr>
             <th>Channel</th>
@@ -188,9 +194,9 @@
 
 
 <div class="centre" style="width:250px;"><pre class="art">
-     _____ ____  _____ 
+     _____ ____  _____
        |    ___]|_____]
-     __|__ |___ |      
+     __|__ |___ |
 
  </pre></div>
 
@@ -199,7 +205,7 @@
         <tr>
             <th>I2P: (127.0.0.1/6668)</th>
             <th></th>
-           
+
         </tr>
         <tr>
             <th>Channel</th>
@@ -226,3 +232,4 @@
 
     </tbody>
 </table>
+</div>
