--- a/app/views/switcher.html
+++ b/app/views/switcher.html
@@ -1,5 +1,5 @@
 
 
 <span ng-click="switchz()"class="bootstrap-switch-square">
-	<input type="checkbox" ng-model="show" ng-change="test" data-toggle="switch" data-on-text="Panel" data-off-text="Raw" data-off-color="primary" id="switch" />
+	<input type="checkbox" ng-model="show" ng-change="test" data-toggle="switch" data-on-text="Raw" data-off-text="Raw" data-off-color="primary" id="switch" />
 </span>
