--- a/app/views/addlink.html
+++ b/app/views/addlink.html
@@ -5,7 +5,7 @@
 
 
   <form class="form-horizontal" role="form">
-  
+
     <div class="form-group">
       <label class="control-label col-sm-2" for="email">Title</label>
       <div class="col-sm-10">
@@ -15,7 +15,7 @@
 
     <div class="form-group">
       <label class="control-label col-sm-2" >Link:</label>
-      <div class="col-sm-10">          
+      <div class="col-sm-10">
         <input type="link" ng-blur="getDescription(link);getTitle(link)" ng-model="link" class="form-control" id="lnk" placeholder="Enter link">
       </div> </div>
 
@@ -23,19 +23,20 @@
        <div class="form-group">
       <label class="control-label col-sm-2" >Description:</label>
 
-      <div class="col-sm-10">          
+      <div class="col-sm-10">
         <input type="description" ng-model="description" class="form-control" id="dscr" placeholder="Enter description">
       </div></div>
 
       <label class="control-label col-sm-2" >Type:</label>
       <div class="form-group">
         <select data-toggle="select" ng-model="type" class="form-control select select-default">
+          <option>Challenge</option>
           <option>Board</option>
           <option>Blog</option>
           <option>IRC</option>
           <option>VPN</option>
         </select>
-      </div>      
+      </div>
       <label class="control-label col-sm-2" >Language:</label>
       <div class="form-group">
         <select data-toggle="select" ng-model="lang" class="form-control select select-default">
@@ -46,7 +47,7 @@
         </select>
       </div>
 
-    <div class="form-group" >        
+    <div class="form-group" >
       <div class="col-sm-offset-2 col-sm-10">
         <button type="submit" ng-click="addLink()" class="btn btn-default">Submit</button>
       </div>
