--- a/app/views/addlink.html
+++ b/app/views/addlink.html
@@ -1,8 +1,18 @@
 
 
 <div class="container">
-  <h2>Add link</h2>
-
+  <div class="centre topspace" style="width:525px;"><pre class="art">
+    ▄▄▄      ▓█████▄ ▓█████▄     ▄▄▄▄    ▄▄▄        ██████ ▓█████
+   ▒████▄    ▒██▀ ██▌▒██▀ ██▌   ▓█████▄ ▒████▄    ▒██    ▒ ▓█   ▀
+   ▒██  ▀█▄  ░██   █▌░██   █▌   ▒██▒ ▄██▒██  ▀█▄  ░ ▓██▄   ▒███
+   ░██▄▄▄▄██ ░▓█▄   ▌░▓█▄   ▌   ▒██░█▀  ░██▄▄▄▄██   ▒   ██▒▒▓█  ▄
+    ▓█   ▓██▒░▒████▓ ░▒████▓    ░▓█  ▀█▓ ▓█   ▓██▒▒██████▒▒░▒████▒
+    ▒▒   ▓▒█░ ▒▒▓  ▒  ▒▒▓  ▒    ░▒▓███▀▒ ▒▒   ▓▒█░▒ ▒▓▒ ▒ ░░░ ▒░ ░
+     ▒   ▒▒ ░ ░ ▒  ▒  ░ ▒  ▒    ▒░▒   ░   ▒   ▒▒ ░░ ░▒  ░ ░ ░ ░  ░
+     ░   ▒    ░ ░  ░  ░ ░  ░     ░    ░   ░   ▒   ░  ░  ░     ░
+         ░  ░   ░       ░        ░            ░  ░      ░     ░  ░
+              ░       ░               ░
+                                                      </pre></div>
 
   <form class="form-horizontal" role="form">
 
@@ -27,8 +37,9 @@
         <input type="description" ng-model="description" class="form-control" id="dscr" placeholder="Enter description">
       </div></div>
 
-      <label class="control-label col-sm-2" >Type:</label>
-      <div class="form-group">
+
+      <div class="form-group" style="width:100px">
+            <label class="control-label col-sm-2" >Type:</label>
         <select data-toggle="select" ng-model="type" class="form-control select select-default">
           <option>Challenge</option>
           <option>Board</option>
@@ -37,13 +48,14 @@
           <option>VPN</option>
         </select>
       </div>
-      <label class="control-label col-sm-2" >Language:</label>
-      <div class="form-group">
+      <div class="form-group" style="width:100px">
+        <label class="control-label col-sm-2" >Language:</label>
+
         <select data-toggle="select" ng-model="lang" class="form-control select select-default">
-          <option>us</option>
-          <option>fr</option>
-          <option>de</option>
-          <option>es</option>
+          <option>US</option>
+          <option>FR</option>
+          <option>DE</option>
+          <option>ES</option>
         </select>
       </div>
 
