--- a/app/views/challenges.html
+++ b/app/views/challenges.html
@@ -6,25 +6,29 @@
  / /   / __ \/ __ `/ / / _ \/ __ \/ __ `/ _ \/ ___/
 / /___/ / / / /_/ / / /  __/ / / / /_/ /  __(__  )
 \____/_/ /_/\__,_/_/_/\___/_/ /_/\__, /\___/____/
-                                /____/             
+                                /____/
                                                     </pre></div>
-<table >
-  <div >
+<div>
+<table>
+
     <thead >
         <tr>
             <th>Challenges</th>
             <th></th>
+            <th></th>
+
         </tr>
 
     </thead>
-    <tbody ng-repeat="chall in challenges">
-        <tr>
-            <td>"{{chall.title}}" </td>
+    <tbody>
+        <tr ng-repeat="chall in challenges  | orderBy : sortBy "title"">
+            <td>{{chall.title}}</td>
+            <td>{{chall.link}}</td>
             <td>{{chall.description}}</td>
         </tr>
 
-</tbody>
-</table>
+      </tbody>
 
+</table>
 </div>
 </div>
