--- a/app/views/addlink.html
+++ b/app/views/addlink.html
@@ -35,7 +35,8 @@
 
       <div class="col-sm-10">
         <input type="description" ng-model="description" class="form-control" id="dscr" placeholder="Enter description">
-      </div></div>
+      </div>
+    </div>
 
 
       <div class="form-group" style="width:100px">
