--- a/app/views/addlink.html
+++ b/app/views/addlink.html
@@ -38,10 +38,11 @@
       </div>
     </div>
 
-
-      <div class="form-group" style="width:100px">
-            <label class="control-label col-sm-2" >Type:</label>
-        <select data-toggle="select" ng-model="type" class="form-control select select-default">
+<div class="">
+      <div class="form-group" >
+            <label class="control-label col-sm-7" >Type:</label>
+            <div class="col-sm-5">
+        <select data-toggle="select" ng-model="type" class="form-control select select-default ">
           <option>Challenge</option>
           <option>Board</option>
           <option>Blog</option>
@@ -49,8 +50,10 @@
           <option>VPN</option>
         </select>
       </div>
-      <div class="form-group" style="width:100px">
-        <label class="control-label col-sm-2" >Language:</label>
+      </div>
+      <div class="form-group">
+        <label class="control-label col-sm-7" >Language:</label>
+        <div class="col-sm-5">
 
         <select data-toggle="select" ng-model="lang" class="form-control select select-default">
           <option>US</option>
@@ -59,10 +62,11 @@
           <option>ES</option>
         </select>
       </div>
-
+      </div>
+</div>
     <div class="form-group" >
       <div class="col-sm-offset-2 col-sm-10">
-        <button type="submit" ng-click="addLink()" class="btn btn-default">Submit</button>
+        <button type="submit" ng-click="addLink(title,description)" class="btn btn-default">Submit</button>
       </div>
     </div>
   </form>
