--- a/app/views/home.html
+++ b/app/views/home.html
@@ -4,8 +4,8 @@
 <br/>
 <!-- Panel View -->
 <!-- {lang: lang, tags: ['tag5','tag2'], isup: hideDownLinks ? true : '' } -->
-<div ng-if="show">
-	<div class="panel panelpanel panpanel-default" ng-repeat="n in links | filterLinks:lang:hideDownLinks:tags | orderBy : sortBy">
+<div ng-if="show" class="centre" masonry>
+	<div class="masonry-brick panel panelpanel panpanel-default" ng-repeat="n in links | filterLinks:lang:hideDownLinks:tags | orderBy : sortBy">
 		<div class="panel-heading">
 			<h3 class="panel-title pantitle txt">
 			<a href="{{n.link}}" target="_blank"><i class=" {{n.lang}} flag"></i>
@@ -30,9 +30,9 @@
 </div>
 
 <!-- Raw View -->
-<div  ng-if="!show" class="panelflex">
+<div masonry ng-if="!show" class="centre" isotope-container="isotope-container">
 
-	<div class="panel  panelraw panpanel-default " ng-repeat="l in languages | orderBy : lang " >
+	<div isotope-item="isotope-item" class="masonry-brick panel  panelraw panpanel-default " ng-repeat="l in languages" >
 
 		<div class="panel-heading" style="text-align:left;">
 			<i class="{{l}} flag"></i>
@@ -50,6 +50,7 @@
 		</ul>
 
 	</div>
+
 
 </div>
 <br>
