--- a/app/views/about.html
+++ b/app/views/about.html
@@ -1,1 +1,7 @@
-<p>This is the about view.</p>
+
+<div style="text-align: center;">
+<div id="page-wrap">
+  <!-- all websites HTML here -->
+  <h1 style="color:#ffffff">{{nbBases}} BASES ARE BELONG TO US</h1>
+</div>
+</div>
