--- a/app/views/addlink.html
+++ b/app/views/addlink.html
@@ -1,6 +1,5 @@
-
-
-<div class="container">
+<div class=style="text-align: center;">
+  <div id="page-wrap">
   <div class="centre topspace" style="width:525px;"><pre class="art">
     ▄▄▄      ▓█████▄ ▓█████▄     ▄▄▄▄    ▄▄▄        ██████ ▓█████
    ▒████▄    ▒██▀ ██▌▒██▀ ██▌   ▓█████▄ ▒████▄    ▒██    ▒ ▓█   ▀
@@ -69,5 +68,5 @@
         <button type="submit" ng-click="addLink(title,description)" class="btn btn-default">Submit</button>
       </div>
     </div>
-  </form>
+  </form></div>
 </div>
