--- a/app/views/addlink.html
+++ b/app/views/addlink.html
@@ -1,4 +1,4 @@
-<div class=style="text-align: center;">
+<div class=style="">
   <div id="page-wrap">
   <div class="centre topspace" style="width:525px;"><pre class="art">
     ▄▄▄      ▓█████▄ ▓█████▄     ▄▄▄▄    ▄▄▄        ██████ ▓█████
@@ -17,14 +17,14 @@
 
     <div class="form-group">
       <label class="control-label col-sm-2" for="email">Title</label>
-      <div class="col-sm-10">
+      <div class="col-sm-9">
         <input ng-model="title" type="title" class="form-control" id="title" placeholder="Enter title">
       </div>
     </div>
 
     <div class="form-group">
       <label class="control-label col-sm-2" >Link:</label>
-      <div class="col-sm-10">
+      <div class="col-sm-9">
         <input type="link" ng-blur="getDescription(link);getTitle(link)" ng-model="link" class="form-control" id="lnk" placeholder="Enter link">
       </div> </div>
 
@@ -32,7 +32,7 @@
        <div class="form-group">
       <label class="control-label col-sm-2" >Description:</label>
 
-      <div class="col-sm-10">
+      <div class="col-sm-9">
         <input type="description" ng-model="description" class="form-control" id="dscr" placeholder="Enter description">
       </div>
     </div>
@@ -40,7 +40,7 @@
 <div class="">
       <div class="form-group" >
             <label class="control-label col-sm-7" >Type:</label>
-            <div class="col-sm-5">
+            <div class="col-sm-4">
         <select data-toggle="select" ng-model="type" class="form-control select select-default ">
           <option>Challenge</option>
           <option>Board</option>
@@ -52,7 +52,7 @@
       </div>
       <div class="form-group">
         <label class="control-label col-sm-7" >Language:</label>
-        <div class="col-sm-5">
+        <div class="col-sm-4">
 
         <select data-toggle="select" ng-model="lang" class="form-control select select-default">
           <option>US</option>
