--- a/app/views/addlink.html
+++ b/app/views/addlink.html
@@ -1,6 +1,6 @@
 <div class=style="">
   <div id="page-wrap">
-  <div class="centre topspace" style="width:525px;"><pre class="art">
+  <div class="centre topspace" style="width:auto;"><pre class="art">
     ▄▄▄      ▓█████▄ ▓█████▄     ▄▄▄▄    ▄▄▄        ██████ ▓█████
    ▒████▄    ▒██▀ ██▌▒██▀ ██▌   ▓█████▄ ▒████▄    ▒██    ▒ ▓█   ▀
    ▒██  ▀█▄  ░██   █▌░██   █▌   ▒██▒ ▄██▒██  ▀█▄  ░ ▓██▄   ▒███
@@ -55,10 +55,12 @@
         <div class="col-sm-4">
 
         <select data-toggle="select" ng-model="lang" class="form-control select select-default">
-          <option>US</option>
-          <option>FR</option>
-          <option>DE</option>
-          <option>ES</option>
+          <option>us</option>
+          <option>fr</option>
+          <option>de</option>
+          <option>es</option>
+          <option>tr</option>
+          <option>cn</option>
         </select>
       </div>
       </div>
