--- a/app/views/about.html
+++ b/app/views/about.html
@@ -1,6 +1,10 @@
-<div style="text-align: center;">
+
+
+<div class=style="">
   <div id="page-wrap">
-    <!-- all websites HTML here -->
+  <div class="centre topspace" style="width:auto;"><pre class="art">
     <h1 style="color:#ffffff">{{nbBases}} BASES ARE BELONG TO US</h1>
-  </div>
+
+</pre></div>
+
 </div>
