--- a/app/views/addlink.html
+++ b/app/views/addlink.html
@@ -1,4 +1,4 @@
-<div class=style="">
+<div class= "topspace"style="">
   <div id="page-wrap">
   <div class="centre topspace" style="width:auto;"><pre class="art">
     ▄▄▄      ▓█████▄ ▓█████▄     ▄▄▄▄    ▄▄▄        ██████ ▓█████
