--- a/app/views/challenges.html
+++ b/app/views/challenges.html
@@ -1,6 +1,6 @@
-<div class="centre">
+<div class="topspace">
 
-<div class="centre topspace" style="width:400px;"><pre class="art">
+<div class="centre" style="width:400px;"><pre class="art">
    ________          ____
   / ____/ /_  ____ _/ / /__  ____  ____ ____  _____
  / /   / __ \/ __ `/ / / _ \/ __ \/ __ `/ _ \/ ___/
