--- a/app/views/filters.html
+++ b/app/views/filters.html
@@ -1,3 +1,3 @@
 <span class="bootstrap-switch-square">
-	<input type="checkbox" name="switch" ng-model="show" data-size="mini" data-on-text="Raw" data-off-text="Panel" data-off-color="primary" id="switch" />
+	<input type="checkbox" name="switch" ng-model="show" data-size="mini" data-on-text="Panel" data-off-text="Raw" data-off-color="primary" id="switch" />
 </span>
