--- a/app/views/irc.html
+++ b/app/views/irc.html
@@ -1,6 +1,6 @@
-<div class="centre">
+<div class="topspace">
 
-<div class="centre topspace" style="width:500px;"><pre class="art">
+<div class="centre " style="width:500px;"><pre class="art">
   ______        _______ _______  ______ __   _ _______ _______
  |       |      |______ |_____| |_____/ | \  | |______    |
  |_____  |_____ |______ |     | |    \_ |  \_| |______    |
