Infinite scroll + masonry kinda fixed

--- a/app/views/blogs.html
+++ b/app/views/blogs.html
@@ -4,7 +4,7 @@
 <br/>
 <!-- Panel View -->
 <!-- {lang: lang, tags: ['tag5','tag2'], isup: hideDownLinks ? true : '' } -->
-<div ng-if="!show" class="centre" masonry>
+<div ng-if="show" class="centre" masonry>
 	<div class="masonry-brick panel panelpanel panpanel-default" ng-repeat="n in blogs | filterLinks:lang:hideDownLinks:tags | orderBy : sortBy">
 		<div class="panel-heading">
 			<h3 class="panel-title pantitle txt">
@@ -32,7 +32,7 @@
 </div>
 
 <!-- Raw View -->
-<div ng-if="show" class="centre" isotope-container="isotope-container" masonry>
+<div ng-if="!show" class="centre" isotope-container="isotope-container" masonry>
 
 	<div class="masonry-brick panel  panelraw panpanel-default " ng-repeat="l in languagesBlogs">
 
@@ -43,7 +43,7 @@
 		<ul class="raw-link" >
 			<li ng-repeat="n in blogs | filter: {lang: l} | filterLinks:'':hideDownLinks:tags | orderBy : sortBy" id="bind-html-with-sanitize" title="{{n.title}}" data-trigger="hover" bs-popover data-html="true" data-animation="am-fade-and-scale" data-content="
 				{{n.description}}
-				<img src='http://localhost:1337/screenshots/{{n.title}}.png' class='img-thumbnail panel-thumb'></img>
+				<img src='http://security-base.com/assets/screenshots/{{n.title}}.png' class='img-thumbnail panel-thumb'></img>
 				">
 				<a href="{{n.link}}" target="_parent">
 					{{n.title}}
