quick about page

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -10,7 +10,12 @@ body {
   padding-left: 15px;
   padding-right: 15px;
 }
-
+.fill-div {
+    display: block;
+    height: 100%;
+    width: 100%;
+    text-decoration: none;
+}
 /* Custom page header */
 .header {
   border-bottom: 1px solid #e5e5e5;
