--- a/app/views/about.html
+++ b/app/views/about.html
@@ -1,10 +1,27 @@
 
 
-<div class=style="">
-  <div id="page-wrap">
-  <div class="centre topspace" style="width:auto;"><pre class="art">
-    <h1 style="color:#ffffff">{{nbBases}} BASES ARE BELONG TO US</h1>
 
-</pre></div>
+  <div id="page-wrap">
+
+  <div class=" topspace" style="width:auto;">
+    <a id="roundpic" href="http://twitter.com/MisterCh0c" target="_blank">
+      <img src="assets/ayblel.png"></a>
+
+
+    <h1 class="abouttxt"style="color:#ffffff">{{nbBases}} BASES ARE BELONG TO US</h1>
+    <br>
+    <h2 class="abouttxt"style="color:#ffffff;"> What is Security Base? </h2>
+    <p style="color:#ffffff;">Security-Base goal is to regroup in a single place
+    all forums, online tools, irc channels, blogs etc directly or indirectely
+    related to information security. This project started as a sort of super
+    bookmarkt for myself and I thought it would be nice to have this online and try
+    to get some contributions.
+  </p>
+    <h2 class="abouttxt"style="color:#ffffff;"> Contribute </h2>
+    <p style="color:#ffffff;">If you want to contribute to this project feel free to submit a pull
+    request on either the <href="">frontend repository or the backend repository on Github </p>
+
+
+</div>
 
 </div>
