--- a/app/views/addlink.html
+++ b/app/views/addlink.html
@@ -61,6 +61,7 @@
           <option>es</option>
           <option>tr</option>
           <option>cn</option>
+          <option>jp</option>
         </select>
       </div>
       </div>
