--- a/app/styles/styles.css
+++ b/app/styles/styles.css
@@ -10,6 +10,29 @@ body {
      margin: 0 auto;
 
 }
+#roundpic {
+    width: 170px;
+		height: 170px;
+    border-radius: 50%;
+    overflow: hidden;
+    display: block;
+    margin: 0 auto;
+    border: 5px solid #bf6165;
+}
+
+#roundpic img {
+    display: block;
+    max-height: 160px;
+    width: auto;
+    line-height: 0;
+
+}
+
+.abouttxt {
+    font-family: "Impact";
+		text-align: center;
+
+}
 .tor{
 	 width: 16%;
 	 padding-top: -5px;
